--- a/library_project/library_app/templates/library_app/myborrowlist.html
+++ b/library_project/library_app/templates/library_app/myborrowlist.html
@@ -76,7 +76,7 @@
 
         <div class="table-legend">
             <p><b>Legenda:</b></p>
-            <p><img src="{% static 'website_icons/prolong_ico.png' %}" alt="Szczegóły" width="20" height="20">Prolonguj egzemplarz</p>
+            <p><img src="{% static 'website_icons/prolong_ico.png' %}" alt="Szczegóły" width="20" height="20">Prolonguj egzemplarz (30 dni)</p>
         </div>
 
 </div>
