--- a/library_project/accounts/templates/accounts/signup.html
+++ b/library_project/accounts/templates/accounts/signup.html
@@ -8,10 +8,10 @@
         {% csrf_token %}
         {% bootstrap_form user_form %}
 
-
         <h3 class="page-title">Informacje dodatkowe</h3>
-
         {% bootstrap_form profile_form %}
+        
+        <p>Rejestrując się oświadczasz, że zapoznałaś/eś się oraz akceptujesz <a style="color: #0645AD" href="{% url 'regulations' %}">Regulamin</a></p>
         <input type="submit" class="btn btn-primary sign-up-btn" value="Zarejestruj się">
     </form>
 </div>
