--- a/library_project/templates/index.html
+++ b/library_project/templates/index.html
@@ -3,5 +3,10 @@
 {% block body_block %}
 <div class="container">
     <h1 class="page-title">Biblioteka</h1>
+    <br>
+    <div class="text-center">
+        <p>Projekt systemu obsługi biblioteki napisany w ramach pracy inżynierskiej pod tytułem:</p>
+        <p>"Projekt i implementacja systemu obsługi biblioteki w oparciu o technologie Django, Bootstrap, HTML, CSS, JavaScript, SQL."</p>
+    </div>
 </div>
 {% endblock %}
