--- a/library_project/templates/regulations.html
+++ b/library_project/templates/regulations.html
@@ -5,11 +5,11 @@
                <h2 class="page-title">Regulamin</h2>
                     <br>
                     <h4><p>§ 1 Zasady ogólne</h4>
-                    <p>1. Zbiory Miejskiej Biblioteki Publicznej, zwanej dalej MBP, są udostępniane wszystkim zainteresowanym na zasadach określonych w niniejszym Regulaminie.</p>
+                    <p>1. Dane wprowadzone w trakcie procesu rejestracji na stronie Biblioteki zostaną sprawdzone przez Bibliotekarza</p>
 
                     <br>
 
-                    <p>2. Czytelnik MBP ma prawo do:</p>
+                    <p>2. Czytelnik Biblioteki ma prawo do:</p>
                     <ul>
                         <p><li>1) wypożyczania na zewnątrz książek i innych mediów,</li></p>
                         <p><li>2) korzystania ze zbiorów udostępnianych na miejscu,</li></p>
@@ -19,27 +19,24 @@
 
                     <br>
                     <h4><p>§ 2 Udostępnianie zbiorów</p></h4>
-                    <p>1. Ze zbiorów wypożyczanych na zewnątrz mogą korzystać osoby, które wypełniły kartę zobowiązania.</p>
+                    <p>1. Jednorazowo Czytelnik może wypożyczyć 5 egzemplarzy udostępnianych mediów tj. egzemplarzy książek lub czasopism</p>
 
                     <br>
-                    <p>2. Ze zbiorów udostępnianych na miejscu można korzystać po okazaniu karty czytelnika lub dokumentu ze zdjęciem.</p>
-
-                    <br>
-                    <p>3. Jednorazowo w jednej filii MBP można wypożyczyć następującą liczbę mediów:</p>
-                    <ul>
-                        <li><p>książki, książki mówione, 1 czytnik, materiały do nauki języków – razem 5 egzemplarzy</li></p>
-                        <li><p>Czasopisma – razem 10 egzemplarzy</li></p>
-                    </ul>
-
-                    <br>
-                    <p> 4. Całkowitym okresem wypożyczenia dla poszczególnych mediów jest:</p>
+                    <p> 2. Okres wypożyczeń</p>
                         <ul>
-                            <li><p>- dla książek, czasopism maksymalnie 60 dni:</p></li>
-                            <li><p>– pierwszy okres wypożyczenia – 30 dni</p></li>
-                            <li><p>– wszystkie przedłużenia – maksymalnie do 30 dni od pierwotnego terminu zwrotu</p></li>
+                            <li><p>- dla egzemplarzy książek i czasopism 60 dni:</p></li>
+                            <li><p>– możliwe jest prolongowanie wypożyczenia przedłużajace okres wypożyczeń o 30 dni</p></li>
+                            <li><p>– każde wypożyczenie może być prolongowane tylko jeden raz</p></li>
+                        </ul>
+
+                     <h4><p>§ 3 Internetowy system obsługi biblioteki</p></h4>
+                    <p>1. Rejestracja</p>
+                        <ul>
+                            <li><p>- po rejestracji na stronie Biblioteki lub korzystając z komputerów udostępnionych w placówce biblioteki należy okazać Bibliotekarzowi dokument tożsamości w celu sprawdzenia poprawności danych wpraowadzonych w czasie rejestracji</p></li>
+                            <li><p>– biblioteka zastrzega sobie prawo do odmowy aktywacji zarejestrowanego konta w przypadku nieprawdziwości wpisanych w czasie rejestracji danych</p></li>
                         </ul>
 
                     <br>
-                    <p> 5. Czytelnik samodzielnie bądź za pośrednictwem bibliotekarza może przesunąć termin zwrotu wypożyczonych mediów, jeśli nie ma na nie zapotrzebowania ze strony innych czytelników i nie minął termin ich zwrotu.</p>
+
 </div>
 {% endblock %}
