--- a/library_project/library_app/templates/library_app/book_detail.html
+++ b/library_project/library_app/templates/library_app/book_detail.html
@@ -32,7 +32,7 @@
             <li class="book_bookcopies"><b>Liczba egzemplarzy: </b> {{book.bookcopies.count}} </li>
             
             {% free_bookcopies_counter_tag book.bookcopies as free_bookcopies %}
-            <li class="book_bookcopies"><b>Liczba wolnych: </b> {{free_bookcopies}} </li>
+            <li class="book_bookcopies"><b>Liczba wolnych egzemplarzy: </b> {{free_bookcopies}} </li>
         </ul>
 
         
