--- a/library_project/templates/index.html
+++ b/library_project/templates/index.html
@@ -5,8 +5,9 @@
     <h1 class="page-title">Biblioteka</h1>
     <br>
     <div class="text-center">
-        <p>Projekt systemu obsługi biblioteki napisany w ramach pracy inżynierskiej pod tytułem:</p>
+        <p>System obsługi biblioteki napisany w ramach pracy inżynierskiej pod tytułem:</p>
         <p>"Projekt i implementacja systemu obsługi biblioteki w oparciu o technologie Django, Bootstrap, HTML, CSS, JavaScript, SQL."</p>
+        <p>Autor: Wojciech Kłusek</p>
     </div>
 </div>
 {% endblock %}
