--- a/library_project/templates/regulations.html
+++ b/library_project/templates/regulations.html
@@ -4,8 +4,8 @@
 <div class="container">
                <h2 class="page-title">Regulamin</h2>
                     <br>
-                    <h4><p>§ 1 Zasady ogólne</h4>
-                    <p>1. Dane wprowadzone w trakcie procesu rejestracji na stronie Biblioteki zostaną sprawdzone przez Bibliotekarza</p>
+                    <h4><p>§ 1 Zasady ogólne.</h4>
+                    <p>1. Dane wprowadzone w trakcie procesu rejestracji na stronie Biblioteki zostaną sprawdzone przez Bibliotekarza.</p>
 
                     <br>
 
@@ -13,27 +13,28 @@
                     <ul>
                         <p><li>1) wypożyczania na zewnątrz książek i innych mediów,</li></p>
                         <p><li>2) korzystania ze zbiorów udostępnianych na miejscu,</li></p>
-                        <p><li>3) korzystania z komputerów</li></p>
+                        <p><li>3) korzystania z komputerów udostępnionych w placówce Biblioteki.</li></p>
                     </ul>
 
 
                     <br>
-                    <h4><p>§ 2 Udostępnianie zbiorów</p></h4>
-                    <p>1. Jednorazowo Czytelnik może wypożyczyć 5 egzemplarzy udostępnianych mediów tj. egzemplarzy książek lub czasopism</p>
+                    <h4><p>§ 2 Udostępnianie zbiorów.</p></h4>
+                    <p>1. Jednorazowo Czytelnik może wypożyczyć 5 egzemplarzy udostępnianych mediów tj. egzemplarzy książek lub czasopism.</p>
 
                     <br>
-                    <p> 2. Okres wypożyczeń</p>
+                    <p> 2. Okres wypożyczeń.</p>
                         <ul>
-                            <li><p>- dla egzemplarzy książek i czasopism 60 dni:</p></li>
-                            <li><p>– możliwe jest prolongowanie wypożyczenia przedłużajace okres wypożyczeń o 30 dni</p></li>
-                            <li><p>– każde wypożyczenie może być prolongowane tylko jeden raz</p></li>
+                            <li><p>- egzemplarzy książek i czasopism 60 dni.</p></li>
+                            <li><p>– możliwe jest prolongowanie wypożyczenia przedłużajace okres wypożyczeń o 30 dni.</p></li>
+                            <li><p>– każde wypożyczenie może być prolongowane tylko jeden raz.</p></li>
                         </ul>
-
-                     <h4><p>§ 3 Internetowy system obsługi biblioteki</p></h4>
-                    <p>1. Rejestracja</p>
+                    
+                    <br>
+                    <h4><p>§ 3 Internetowy system obsługi biblioteki.</p></h4>
+                    <p>1. Rejestracja.</p>
                         <ul>
-                            <li><p>- po rejestracji na stronie Biblioteki lub korzystając z komputerów udostępnionych w placówce biblioteki należy okazać Bibliotekarzowi dokument tożsamości w celu sprawdzenia poprawności danych wpraowadzonych w czasie rejestracji</p></li>
-                            <li><p>– biblioteka zastrzega sobie prawo do odmowy aktywacji zarejestrowanego konta w przypadku nieprawdziwości wpisanych w czasie rejestracji danych</p></li>
+                            <li><p>- po rejestracji na stronie Biblioteki lub korzystając z komputerów udostępnionych w placówce biblioteki należy okazać Bibliotekarzowi dokument tożsamości w celu sprawdzenia poprawności danych wpraowadzonych w czasie rejestracji.</p></li>
+                            <li><p>– biblioteka zastrzega sobie prawo do odmowy aktywacji zarejestrowanego konta w przypadku nieprawdziwości wpisanych w czasie rejestracji danych.</p></li>
                         </ul>
 
                     <br>
