--- a/library_project/templates/base.html
+++ b/library_project/templates/base.html
@@ -47,13 +47,13 @@
                     <li class="nav-item dropdown active">
                         <a class="nav-link dropdown-toggle" href="#" id="BorrowBook" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">
-                            Wypożyczanie
+                            Wypożyczenia
                         </a>
                         <div class="dropdown-menu" aria-labelledby="BorrowBook">
                             <a class="dropdown-item" href="{% url 'library_app:borrow_create' %}">Wypożycz egzemplarz książki</a>
+                            <a class="dropdown-item" href="{% url 'library_app:borrow_list' %}">Odbierz egzemplarz książki</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'library_app:bookcopy_list' %}">Lista egzemplarzy</a>
-                            <a class="dropdown-item" href="{% url 'library_app:borrow_list' %}">Lista wypożyczeń</a>
                             <a class="dropdown-item" href="{% url 'library_app:borrow_history_list' %}">Historia wypożyczeń</a>
                         </div>
                     </li>
