--- a/library_project/library_app/templates/library_app/book_list.html
+++ b/library_project/library_app/templates/library_app/book_list.html
@@ -101,7 +101,7 @@
         <p><b>Legenda:</b></p>
         <p><img src="{% static 'website_icons/info_ico.png' %}" alt="Szczegóły" width="20" height="20">Szczegóły książki</p>
         {% if user.is_superuser %}
-            <p><img src="{% static 'website_icons/del_ico.png' %}" alt="Usuń wypozyczenie" width="20" height="20">Usuń książkę (gdy nie ma jej egzemplarzy)</p>
+            <p><img src="{% static 'website_icons/del_ico.png' %}" alt="Usuń książkę" width="20" height="20">Usuń książkę (gdy nie ma jej egzemplarzy)</p>
         {% endif %}
     </div>
 
