--- a/library_project/library_app/templates/library_app/users_list.html
+++ b/library_project/library_app/templates/library_app/users_list.html
@@ -44,9 +44,16 @@
 
             {% for user_profile_obj in users_profile_list %}
                 {% get_borrow_by_user_count user_profile_obj.user as user_obj_borrow_count %}
+                    
+                <!-- Jeśli ma jakieś nieoddane wypożyczenia to kolor czerwony -->
+                {% have_any_borrows_with_exceeded_receive_date user_profile_obj.user as have_borrows_with_exceeded_receive_date %}
+                {% if have_borrows_with_exceeded_receive_date %}
+                    <tr style="color:red">
+                {% else %}
                     <tr>
+                {% endif %}
                         <td>
-                            <a href="{% url 'library_app:user_profile' pk=user_profile_obj.pk %}"><img src="{% static 'website_icons/info_ico.png' %}" alt="Szczegóły" width="20" height="20"></a>
+                            <a href="{% url 'library_app:user_borrows' pk=user_profile_obj.user.pk %}"><img src="{% static 'website_icons/info_ico.png' %}" alt="Szczegóły" width="20" height="20"></a>
                             <!-- Aktywowanie usera -->
                             {% if user.is_superuser and user_profile_obj.user.is_active == False %}
                                 <a href="{% url 'library_app:user_activate' pk=user_profile_obj.pk %}"><img src="{% static 'website_icons/activate_user_ico.png' %}" alt="Aktywuj konto" width="20" height="20"></a>
@@ -131,6 +138,7 @@
         <p><img src="{% static 'website_icons/deactivate_user_ico.png' %}" alt="Usuń wypozyczenie" width="20" height="20">Dezaktywwuj konto (gdy dany użytkownik nie ma wypożyczeń i jego konto nie ma statusu bibliotekarza)</p>
         <p><img src="{% static 'website_icons/grant_to_librarian_ico.png' %}" alt="Nadaj uprawnienia bibliotekrza" width="20" height="20">Nadaj uprawnienia bibliotekrza</p>
         <p><img src="{% static 'website_icons/get_librarian_rights_ico.png' %}" alt="Odbierz uprawnienia bibliotekrza" width="20" height="20">Odbierz uprawnienia bibliotekrza</p>
+        <p>Wiersz w kolorze czerwonym oznacza użytkownika z wypożyczeniem w których minął czas oddania wypożyczenia</p>
     </div>
 
 </div>
