--- a/library_project/library_app/templates/library_app/user_borrows.html
+++ b/library_project/library_app/templates/library_app/user_borrows.html
@@ -93,7 +93,7 @@
         <div class="table-legend">
             <p><b>Legenda:</b></p>
             {% if user.is_superuser %}
-                <p><img src="{% static 'website_icons/del_ico.png' %}" alt="Usuń wypozyczenie" width="20" height="20">Usuń wypożyczenie</p>
+                <p><img src="{% static 'website_icons/del_borrow_ico.png' %}" alt="Usuń wypozyczenie" width="20" height="20">Usuń wypożyczenie</p>
             {% endif %}
         </div>
         {% endif %} <!-- if od liczby wypozyczen = 0-->
