--- a/library_project/templates/base.html
+++ b/library_project/templates/base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>Biblioteka</title>
 
+   
 
     <!-- Bootstrap4 -->
     <link rel="stylesheet" href="{% static '/bootstrap/css/bootstrap.min.css' %}">
@@ -15,6 +16,8 @@
 
     <!-- Wlasny css -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+    {% block head_block %}{% endblock %}
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -126,5 +129,7 @@
 
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/Chart.min.js' %}"></script>
+     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
 </body>
 </html>
