--- a/library_project/templates/index.html
+++ b/library_project/templates/index.html
@@ -58,7 +58,7 @@
     <h1 class="page-title">Biblioteka</h1>
     <br>
     <div class="text-center">
-        <p>System obsługi biblioteki napisany w ramach pracy inżynierskiej pod tytułem:</p>
+        <p>System obsługi biblioteki stworzony w ramach pracy inżynierskiej pod tytułem:</p>
         <p>"Projekt i implementacja systemu obsługi biblioteki w oparciu o technologie Django, Bootstrap, HTML, CSS, JavaScript, SQL."</p>
         <p>Autor: Wojciech Kłusek</p>
     </div>
@@ -68,6 +68,6 @@
             <div class="borrows_by_months">
                 <canvas id="bar-chart-books-per-month" width="300" height="300"></canvas>
             </div>
-            <p class="text-center">Wykres przedstawia książki które zostały wypożyczone a następnie zwrócone przez czytelników</p>
+            <p class="text-center">Wykres przedstawia książki które zostały wypożyczone, a następnie zwrócone przez czytelników</p>
 </div>
 {% endblock %}
