--- a/library_project/templates/base.html
+++ b/library_project/templates/base.html
@@ -53,7 +53,7 @@
                             Wypożyczenia
                         </a>
                         <div class="dropdown-menu" aria-labelledby="BorrowBook">
-                            <a class="dropdown-item" href="{% url 'library_app:borrow_create' %}">Wypożycz egzemplarz książki</a>
+                            <a class="dropdown-item" href="{% url 'library_app:borrow_create_search_user' %}">Wypożycz egzemplarz książki</a>
                             <a class="dropdown-item" href="{% url 'library_app:borrow_list' %}">Odbierz egzemplarz książki</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'library_app:bookcopy_list' %}">Lista egzemplarzy</a>
